Add notes on D'Arcy Thompson

--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -12,7 +12,7 @@ Notizen aus "`Vergleichende und funktionelle Anatomie der Wirbeltiere"' \cite{Ve
  \item Analogie von Strukturen: gleiche Funktion aber nicht gleiche phylogenetische Herkunft (S.\ 6)
  \item serielle Homologie: homologe Gene an verschiedenen Körperteilen aktiviert (\zb Wirbel) (S.\ 7) $\rightarrow$ gleiche/sehr ähnliche Regeln
  \item rudimentäre/degenerierte Organe: haben keine Funktion mehr, waren aber bei Vorfahren funktionell (\zb Beckengürtel des Finnwals) (S.\ 9/10)
- \item Veränderungen von Körperproportionen (\zb Schädelknochen) können durch eine fortschreitende Verzerrung eines Gitters beschrieben werden (S.\ 18/19), siehe auch \cite{Darcy_Thompson} und \url{https://en.wikipedia.org/wiki/On_Growth_and_Form} \todo{anschauen} %TODO
+ \item Veränderungen von Körperproportionen (\zb Schädelknochen) können durch eine fortschreitende Verzerrung eines Gitters beschrieben werden (S.\ 18/19), siehe auch  Anhang \ref{appendix_darcy_thompson}
 \end{itemize}
 
 \textbf{Kapitel 2} - Charakterisierung , Ursprung und Einteilung der Vertebraten
@@ -85,4 +85,29 @@ Notizen aus "`Vergleichende und funktionelle Anatomie der Wirbeltiere"' \cite{Ve
 \end{itemize}
 
 
+%--------------
+\chapter{D'Arcy Thompson}
+\label{appendix_darcy_thompson}
+
+(siehe auch \url{https://en.wikipedia.org/wiki/On_Growth_and_Form})
+
+Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArcy_Thompson}:\\
+
+\textbf{Kapitel 2} - Über die Größe
+\begin{itemize}
+ \item Maximale und minimale Größe eines Tieres sind durch unterschiedliche Faktoren, wie \zb das Atmungssystem festgelegt. Bei Säugetieren: min.\ 5g (Maus)  (S.\ 68) und max.\ sowas wie Elefant
+\end{itemize}
+
+\textbf{Kapitel 4} - Über die Theorie der Transformationen oder den Vergleich verwandter Formen
+\begin{itemize}
+ \item "`Es handelt sich hier um das berühmteste Kapitel des Buches, das in der biologischen Literatur schon vielfach besprochen worden ist."' (S.\ 325, Kommentar des Herausgebers (?))
+ \item Kartesische Transormationen (S.\ 334 ff)
+ \begin{enumerate}
+  \item entlang einer Achse ausdehnen
+  \item logarithmische Verlängerung
+  \item einfache Scherung
+  \item radiale Koordinaten
+ \end{enumerate}
+ \item Beispiele \zb S.\ 366 f, Säugetierschädel ab S.\ 371
+\end{itemize}
 
