--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -36,11 +36,25 @@
  year = {2004},
 }
 
-@Book{Darcy_Thompson,
- author = { Thompson, D'Arcy Wentworth, },
- title = { On growth and form / by D'Arcy Wentworth Thompson },
- edition = { 2nd ed. },
- isbn = { 0521066220 },
- publisher = { Cambridge University Press Cambridge, Eng },
- year = { 1942 },
+@book{DArcy_Thompson,
+ title = {Über Wachstum und Form},
+ series = {Wissenschaft und Kultur ; 26},
+ author = {Thompson [Verfasser], D'Arcy Wentworth},
+ editor = {Bonner, John Tyler and Portmann [Verfasser eines Geleitwortes], Adolf},
+ address = {Basel},
+ publisher = {Birkhäuser},
+ year = {1973},
+ edition = {In gekürzter Fassung neu hrsg. vom John Tyler Bonner},
+ isbn = {3764305363},
+ keywords = {Morphologie <Biologie> ; Biologie / Wachstum},
+ note = {Neu hrsg. und gekürzte Fass. der Ausg. Cambridge 1966}
 }
+
+	
+	
+	
+	
+	
+		
+		
+	
