Add first and second reviewer

--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -25,13 +25,13 @@
 \newcommand{\mytitle}{Generierung von Wirbeltierskeletten}
 \newcommand{\myinstitute}{Institut für Visualisierung und Datenanalyse,\\ Lehrstuhl für Computergrafik}
 
-\newcommand{\reviewerone}{?}
-\newcommand{\reviewertwo}{?}
+\newcommand{\reviewerone}{Prof. Dr.-Ing. Carsten Dachsbacher}
+\newcommand{\reviewertwo}{Prof. Dr. Hartmut Prautzsch}
 \newcommand{\advisor}{Dr. Johannes Schudeiske}
-\newcommand{\advisortwo}{?}
+%\newcommand{\advisortwo}{?}
 
-\newcommand{\timestart}{XX. Monat 20XX}
-\newcommand{\timeend}{XX. Monat 20XX}
+\newcommand{\timestart}{\date{01.12.2019}}
+\newcommand{\timeend}{\date{31.05.2020}}
 \newcommand{\submissiontime}{DD. MM. 20XX}
 
 
