Obj reader/writer can also generate data that is usable by OpenGL

--- a/latex/content.tex
+++ b/latex/content.tex
@@ -180,7 +180,7 @@
 \begin{itemize}
  \item Beschreibung des Formats: \url{https://www.fileformat.info/format/wavefrontobj/egff.htm}
  \item Erzeugung mit Rust: obj\_exporter \url{https://docs.rs/obj-exporter/0.2.0/obj_exporter/index.html}
- \item Erzeugung mit Java: javagl Obj \url{https://github.com/javagl/Obj}
+ \item Erzeugung mit Java: javagl Obj \url{https://github.com/javagl/Obj}, unterstützt auch Umwandlung von obj-Daten in Daten, die direkt für vertex buffer objects in OpenGL verwendet werden können
  \item Reicht wahrscheinlich für die ersten Dinge aus. Finetuning wird sowieso mit anderer Software gemacht
 \end{itemize}
 
