Tidy up to start with topology generation (without 3D representation, output only ids and hierarchy

--- a/latex/content.tex
+++ b/latex/content.tex
@@ -260,6 +260,7 @@
 
  \item Lage der Wirbelsäule am Anfang festlegen (?), da sie der zentrale Teil des Körpers ist und die Lage der anderen Körperteile grob festlegt. Form variiert von Gerade (Fisch) bis geschwungener Hals und Schwanz (z.B. Giraffe). Mensch passt hier nicht ganz ins Schema $\rightarrow$ weglassen?
  \item Kombination von Wirbelsäule und Kontaktpunkte mit dem Boden ergeben Lage der Beine.
+ \item Die Knochen sollen eine Hierarchie (Baum) bilden. Was ist am sinnvollsten für den Wurzelknoten? $\rightarrow$ teste mit einem Wirbel in der Nähe es Schwerpunkts (eine Hüfte gibt es bspw.\ nicht bei allen Tieren)
 \end{itemize}
 
 
