Rule for vertebrae in neck

--- a/latex/content.tex
+++ b/latex/content.tex
@@ -54,6 +54,10 @@
  \item "`Wirbeltiere (Vertebrata) [\dots] Von vielen Zoologen wird heute der Begriff Schädeltiere (Craniota) für dieses Taxon bevorzugt. Diese Auffassung berücksichtigt, dass die Rundmäuler, wie auch einige andere Wirbeltiere, als Achsenskelett keine Wirbelsäule, sondern eine Chorda dorsalis haben. Doch allen Wirbeltieren gemein ist ein verknöcherter oder knorpeliger Schädel; sein Vorhandensein gehört somit zu den gemeinsam abgeleiteten Merkmalen (Synapomorphien) dieser Chordaten-Gruppe."' (\url{https://de.wikipedia.org/wiki/Wirbeltiere}) $\rightarrow$ Beschränkung auf Schädeltiere mit Wirbelsäule
  \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) Notizen zu \cite{Vergleichende_Anatomie} siehe Anhang \ref{appendix_vergleichende_anatomie}.
  \item Das Skelett eines Wirbeltiers ist nicht unbedingt zusammenhängend.
+ 
+ \item "`Säugetiere haben in der Regel sieben Halswirbel."' Es kann aber zwischen $6$ und $31$ variieren. Vögel haben zwischen $10$ und $31$ und zwei Tiere haben $6$ Wirbel. (\url{https://de.wikipedia.org/wiki/Halswirbel})
+ 
+ \item Form der Wirbelsäule siehe \url{https://de.wikipedia.org/wiki/Wirbels\%C3\%A4ule}
 \end{itemize}
 
 %-------------
