Change title to title on registration

--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -22,7 +22,7 @@
 %% ---------------------------------
 
 \newcommand{\myname}{Nina Zimbel}
-\newcommand{\mytitle}{Generierung von Wirbeltierskeletten}
+\newcommand{\mytitle}{Prozedurale Generierung von Wirbeltierskeletten}
 \newcommand{\myinstitute}{Institut für Visualisierung und Datenanalyse,\\ Lehrstuhl für Computergrafik}
 
 \newcommand{\reviewerone}{Prof. Dr.-Ing. Carsten Dachsbacher}
