--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -75,6 +75,7 @@
 %% --------------------------------
 \newcommand{\zb}{z.\,B.\ }
 \newcommand{\dash}{d.\,h.\ }
+\newcommand{\bzw}{bzw.\ }
 
 %% --------------------------------
 %% | Settings for word separation |
